--- a/.env
+++ b/.env
@@ -1,1 +1,1 @@
-token=MTMyMzcwNjMzNjUyMDY5OTkxNA.Gd9JMt.9NTIKvUphmKThYILEWw7DgQVP5pHcbUoducGes
+TOKEN='MTMyMzcwNjMzNjUyMDY5OTkxNA.Gd9JMt.9NTIKvUphmKThYILEWw7DgQVP5pHcbUoducGes'
